unity run year 7

--- a/lakestour.html
+++ b/lakestour.html
@@ -47,8 +47,11 @@
     <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_ir&fields=nglshnm&varname=geojsonreserves"></script>
     <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=place_name_areas_new_4326&fields=name&varname=placenames"></script>
 	<script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=coyote_landmark_areas&fields=label&varname=coyote"></script>
-    <script src="js/lakes.js"></script>
     <script src="js/places.js"></script>
+    <script src="js/lakes.js"></script>
+    <script src="js/unity_runs.js"></script>
+    <script src="js/photo7.js"></script>
+    <script src="js/photopoints.js"></script>
   
   
 </head>
