--- a/unity_runs.html
+++ b/unity_runs.html
@@ -68,7 +68,7 @@
   
   <script src="js/styles.js"></script>
   <script src="js/layers.js"></script>
-  <script src="js/map.js"></script>
+  <script src="js/unitymap.js"></script>
   
 	
 </body>
