--- a/year7tour.html
+++ b/year7tour.html
@@ -58,7 +58,7 @@
 <body>
   <div id="map" style="width: 100%; height: 100%;"></div>
 
-  <div id="slides_container" style="display:block;">
+  <div id="slides_container_run" style="display:block;">
     <div id="dots"></div>
 
     <div id="slides"></div>
@@ -82,7 +82,7 @@
   <script src = "js/slidestuff.js"></script>
   <script src="js/styles.js"></script>
   <script src="js/layers.js"></script>
-  <script src='js/template1.js'></script>
+  <script src='js/runtemplate.js'></script>
 
   <!--<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -102,69 +102,123 @@
 -author: "ecotrust"
 ```
 
-#Okanagan Nation Territory
+#2015
 ```
-- center: [50.485316, -119.518520]
-- zoom: 7
-```
-Welcome to the Okanagan Nation Alliance.  Click on the arrows at the bottom of this box to view the bands which make up the alliance.
-
-# Upper Nicola Band
-```
-- center: [50.141730, -120.785737]
+- center: [48.4098, -119.9168]
 - zoom: 10
 ```
-![UNB](images/unib_logo1.gif)
+![LSIB](images/year7_1.jpg)
 
-[ Some
-> text
-> >here               ]
+Running from powwow grounds 
 
 
-
-#Okanagan Indian Band
+#2015
 ```
-- center: [50.356162, -119.319863]
+- center: [48.2982, -119.8314]
 - zoom: 10
 ```
-![OKIB](images/okib_logo.png)
+![LSIB](images/year7_2.jpg)
 
-#Westbank First Nation
+Running past Omak lake, Omak, WA, USA
+
+#2015
 ```
-- center: [49.882108, -119.534552]
+- center: [48.1342, -119.7222]
 - zoom: 10
 ```
+![LSIB](images/year7_3.jpg)
 
-![WFN](images/wfn_logo.png)
+Goose Lake 
 
-#Penticton Indian Band
+#2015
 ```
-- center: [49.480076, -119.601690]
+- center: [48.1517, -119.5380]
 - zoom: 10
 ```
+![LSIB](images/year7_4.jpg)
 
-![PIB](images/pib_logo.png)
+Running along the Columbia River 
 
-#Osoyoos Indian Band
+#2015
 ```
-- center: [49.181749, -119.535686]
+- center: [48.1358, -119.4803]
 - zoom: 10
 ```
+![LSIB](images/year7_5.jpg)
 
-![OIB](images/oib_logo.png)
-
-#Lower Similkameen Indian Band
+#2015
 ```
-- center: [49.207326, -119.832317]
+- center: [48.0777, -119.1831]
 - zoom: 10
 ```
-![LSIB](images/lsib_logo.png)
+![LSIB](images/year7_6.jpg)
 
-#Upper Similkameen Indian Band
+Running through Keller, WA, USA
+
+#2015
 ```
-- center: [49.356317, -120.079440]
+- center: [48.0784, -119.1842]
 - zoom: 10
 ```
-![USIB](images/usib_logo.png)
+![LSIB](images/year7_7.jpg)
+
+Run in progress signs 
+
+#2015
+```
+- center: [48.2250, -119.1826]
+- zoom: 10
+```
+![LSIB](images/year7_8.jpg)
+
+Running past the place where names were given
+
+#2015
+```
+- center: [48.2360, -119.0614]
+- zoom: 10
+```
+![LSIB](images/year7_9.jpg)
+
+Running through Bridge Creek Road to Inchelium 
+
+#2015
+```
+- center: [48.2883, -118.7778]
+- zoom: 10
+```
+![LSIB](images/year7_10.jpg)
+
+Running down to Inchliuem 
+
+#2015
+```
+- center: [48.6308, -118.6074]
+- zoom: 10
+```
+![LSIB](images/year7_11.jpg)
+
+At the sharpening stone 
+
+#2015
+```
+- center: [49.0008, -118.7233]
+- zoom: 10
+```
+![LSIB](images/year7_12.jpg)
+
+Entering Canada at the Laurier Border Crossing 
+
+#2015
+```
+- center: [49.0434, -118.7187]
+- zoom: 10
+```
+![LSIB](images/year7_13.jpg)
+
+Final group photo at Christina Lake 
+
+
+
 
 </script></body></html>
