--- a/head1.html
+++ b/head1.html
@@ -1,23 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>VOTL</title>
-	<meta charset="utf-8" />
+<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Voices On the Land</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-	<link rel="stylesheet" href="leaflet/leaflet.css" />
+  <link rel="icon" type="image/x-icon" href="odyssey/sandbox/favicon.png">
+  <link rel="icon" type="image/png" href="http://voicesontheland.org/projects/ce_atlas/group_images/Okanagan_Nation_Alliance949_3.jpg">
+
+  <!--Odyssey and Leaflet Links-->
+  <link rel="stylesheet" href="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
+  <link rel="stylesheet" href="odyssey/sandbox/css/slides.css">
+  <script src="odyssey/vendor/modernizr-2.6.2.min.js"></script>
+  <link rel="stylesheet" href="leaflet/leaflet.css" />
 	<link rel="stylesheet" href="leaflet/label/dist/leaflet.label.css" />
-	<!--<script src="leaflet/leaflet.js"></script>-->
+	<script src="leaflet/leaflet.js"></script>
 	<script src="leaflet/leaflet-src.js"></script>
 
-    <script src="leaflet/label/dist/leaflet.label.js"></script>
-	<!--<script src="leaflet/label/src/Label.js"></script>
+	<script src="leaflet/label/src/Label.js"></script>
 	<script src="leaflet/label/src/BaseMarkerMethods.js"></script>
 	<script src="leaflet/label/src/Marker.Label.js"></script>
 	<script src="leaflet/label/src/CircleMarker.Label.js"></script>
 	<script src="leaflet/label/src/Path.Label.js"></script>
 	<script src="leaflet/label/src/Map.Label.js"></script>
-	<script src="leaflet/label/src/FeatureGroup.Label.js"></script>-->
+	<script src="leaflet/label/src/FeatureGroup.Label.js"></script>
 	
 	<link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.Default.css" />
@@ -29,9 +34,6 @@
   
     <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
     <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
-	
-	<link rel="stylesheet" href="leaflet/locationlist/src/leaflet.locationlist.css" />
-    <script src="leaflet/locationlist/src/leaflet.locationlist.js"></script>
 	
 	<script type="text/javascript" src="jquery.js"></script>
 	
@@ -48,29 +50,3 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
-	
-	<style>
-	#map {
-			position:absolute;top:0;left:0;width:100%;height:100%
-		}
-	</style>
-	
-
-	
-</head>
-<body>
-	<div id="map"></div>
-	
-
-	
-	<!--More Odyssey, and Leaflet Plugins-->
-  <script src="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/cartodb.js"></script>
-  <script src="odyssey/dist/odyssey.js" charset="UTF-8"></script>
-  
-  <script src="js/styles.js"></script>
-  <script src="js/layers.js"></script>
-  <script src="js/map.js"></script>
-  
-	
-</body>
-</html>
