--- a/year1tour.html
+++ b/year1tour.html
@@ -6,38 +6,29 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/x-icon" href="odyssey/sandbox/favicon.png">
   <link rel="icon" type="image/png" href="http://voicesontheland.org/projects/ce_atlas/group_images/Okanagan_Nation_Alliance949_3.jpg">
 
   <!--Odyssey and Leaflet Links-->
   <link rel="stylesheet" href="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
   <link rel="stylesheet" href="odyssey/sandbox/css/slides.css">
   <script src="odyssey/vendor/modernizr-2.6.2.min.js"></script>
+  
   <link rel="stylesheet" href="leaflet/leaflet.css" />
-	<link rel="stylesheet" href="leaflet/label/dist/leaflet.label.css" />
-	<script src="leaflet/leaflet.js"></script>
-	<script src="leaflet/leaflet-src.js"></script>
-
-	<script src="leaflet/label/src/Label.js"></script>
-	<script src="leaflet/label/src/BaseMarkerMethods.js"></script>
-	<script src="leaflet/label/src/Marker.Label.js"></script>
-	<script src="leaflet/label/src/CircleMarker.Label.js"></script>
-	<script src="leaflet/label/src/Path.Label.js"></script>
-	<script src="leaflet/label/src/Map.Label.js"></script>
-	<script src="leaflet/label/src/FeatureGroup.Label.js"></script>
+  <script src="leaflet/leaflet.js"></script>
+  
+  <link rel="stylesheet" href="leaflet/label/dist/leaflet.label.css" />
+  <script src="leaflet/label/dist/leaflet.label.js"></script>
 	
-	<link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.Default.css" />
-    <script src="leaflet/marker/dist/leaflet.markercluster-src.js"></script>
+  <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.css" />
+  <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.Default.css" />
+  <script src="leaflet/marker/dist/leaflet.markercluster-src.js"></script>
   
+  <link rel="stylesheet" href="leaflet/minimap/src/Control.MiniMap.css" />
+  <script src="leaflet/minimap/src/Control.MiniMap.js"></script>
   
-    <link rel="stylesheet" href="leaflet/minimap/src/Control.MiniMap.css" />
-    <script src="leaflet/minimap/src/Control.MiniMap.js"></script>
-  
-    <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
-    <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
+  <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
+  <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
 	
-	<script type="text/javascript" src="jquery.js"></script>
 	
 	<!--Links to php scripts which convert postgres data to geojson-->  
     <script src="http://voicesontheland.org/media/alex2.php"></script><!--Converts media table with videos to geojsonpoint-->
@@ -101,122 +92,79 @@
 -title: "VOTL"
 -author: "ecotrust"
 ```
-
-#2015
+#2009
 ```
-- center: [48.4098112399138, -119.816865017857]
+- center: [49.8405512988814, -119.895657502366]
 - zoom: 10
 ```
-![LSIB](images/year7_1.jpg)
+![LSIB](images/year1_1.jpg)
 
-Running from powwow grounds 
-
-
-#2015
+#2009
 ```
-- center: [48.2982920831794, -119.731472024421]
+- center: [49.7839441400873, -120.01787350196]
 - zoom: 10
 ```
-![LSIB](images/year7_2.jpg)
+![LSIB](images/year1_2.jpg)
 
-Running past Omak lake, Omak, WA, USA
-
-#2015
+#2009
 ```
-- center: [48.1342079647704, -119.622230642913]
+- center: [49.6492177153149, -119.994819363807]
 - zoom: 10
 ```
-![LSIB](images/year7_3.jpg)
+![LSIB](images/year1_3.jpg)
 
-Goose Lake 
-
-#2015
+#2009
 ```
-- center: [48.1517564244359, -119.438087948345]
+- center: [49.5140959875112, -119.917453535988]
 - zoom: 10
 ```
-![LSIB](images/year7_4.jpg)
+![LSIB](images/year1_4.jpg)
 
-Running along the Columbia River 
-
-#2015
+#2009
 ```
-- center: [48.1358846236373, -119.280357881215]
+- center: [49.3450632840535, -120.018020741127]
 - zoom: 10
 ```
-![LSIB](images/year7_5.jpg)
+![LSIB](images/year1_5.jpg)
 
-#2015
+#2009
 ```
-- center: [48.0777668942931, -118.983164277201]
+- center: [49.137521578551, -120.035127848344]
 - zoom: 10
 ```
-![LSIB](images/year7_6.jpg)
+![LSIB](images/year1_6.jpg)
 
-Running through Keller, WA, USA
-
-#2015
+#2009
 ```
-- center: [48.0784652657692, -118.984238557746]
+- center: [49.0297652206618, -119.992489879278]
 - zoom: 10
 ```
-![LSIB](images/year7_7.jpg)
+![LSIB](images/year1_7.jpg)
 
-Run in progress signs 
-
-#2015
+#2009
 ```
-- center: [48.2250449347365, -118.982699521458]
+- center: [49.0789301993044, -119.861505759828]
 - zoom: 10
 ```
-![LSIB](images/year7_8.jpg)
+![LSIB](images/year1_8.jpg)
 
-Running past the place where names were given
-
-#2015
+#2009
 ```
-- center: [48.2360064462806, -118.861428243634]
+- center: [49.0352577529624, -119.780040227672]
 - zoom: 10
 ```
-![LSIB](images/year7_9.jpg)
+![LSIB](images/year1_9.jpg)
 
-Running through Bridge Creek Road to Inchelium 
-
-#2015
+#2009
 ```
-- center: [48.288341182513, -118.57787136377]
+- center: [49.185188773354, -119.833005009237]
 - zoom: 10
 ```
-![LSIB](images/year7_10.jpg)
+![LSIB](images/year1_10.jpg)
 
-Running down to Inchliuem 
 
-#2015
-```
-- center: [48.6308911615881, -118.407434346931]
-- zoom: 10
-```
-![LSIB](images/year7_11.jpg)
 
-At the sharpening stone 
 
-#2015
-```
-- center: [49.0008839638951, -118.523387200109]
-- zoom: 10
-```
-![LSIB](images/year7_12.jpg)
-
-Entering Canada at the Laurier Border Crossing 
-
-#2015
-```
-- center: [49.0434550069213, -118.518790660846]
-- zoom: 10
-```
-![LSIB](images/year7_13.jpg)
-
-Final group photo at Christina Lake 
 
 
 
