--- a/nationstour.html
+++ b/nationstour.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="leaflet/leaflet.css" />
 	<link rel="stylesheet" href="leaflet/label/dist/leaflet.label.css" />
 	<script src="leaflet/leaflet.js"></script>
-	<script src="leaflet/leaflet-src.js"></script>
 
 	<script src="leaflet/label/src/Label.js"></script>
 	<script src="leaflet/label/src/BaseMarkerMethods.js"></script>
@@ -52,6 +51,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -104,7 +104,7 @@
 
 #Okanagan Nation Territory
 ```
-- center: [50.485316, -119.518520]
+- center: [50.1, -120.9]
 - zoom: 7
 ```
 Welcome to the Okanagan Nation Alliance.  Click on the arrows at the bottom of this box to view the bands which make up the alliance.
@@ -114,20 +114,30 @@ Welcome to the Okanagan Nation Alliance.  Click on the arrows at the bottom of t
 - center: [50.141730, -120.785737]
 - zoom: 10
 ```
-![UNB](images/unib_logo1.gif)
+![UNB](images/unib_logo.gif)
 
-[ Some
-> text
-> >here               ]
+Chief: Harvey McLeod
 
+8 reserves throughout a landbase of 1600 hectares
 
+website: www.uppernicolaband.com
 
 #Okanagan Indian Band
 ```
-- center: [50.356162, -119.319863]
+- center: [50.356162, -119.519863]
 - zoom: 10
 ```
 ![OKIB](images/okib_logo.png)
+
+Chief: Bryon Louis
+
+The Okanagan Valley is known as the Syeelhwh Nation
+
+6 reserves located at the head of the Okananagan Lake
+
+1800's was the time of Okanagan Ancestors' first encounter with European fur traders
+
+website: www.okib.ca
 
 #Westbank First Nation
 ```
@@ -137,34 +147,97 @@ Welcome to the Okanagan Nation Alliance.  Click on the arrows at the bottom of t
 
 ![WFN](images/wfn_logo.png)
 
+Chief: Robert Louie
+
+Consists of 5 reserves
+
+In 1963 Westbank First Nation was officially an independant band
+
+In 2005, WFN achieved the Westbank First Nation Self-Government Act
+
+website: www.wfn.ca
+
 #Penticton Indian Band
 ```
-- center: [49.480076, -119.601690]
-- zoom: 10
+- center: [49.45, -119.8]
+- zoom: 11
 ```
 
 ![PIB](images/pib_logo.png)
 
+Chief: Jonathan Kruger
+
+Consists of 3 reserves that create the largest land base of the member bands
+
+The land base is 19,436 hectares
+
+website: www.pib.ca
+
+
 #Osoyoos Indian Band
 ```
-- center: [49.181749, -119.535686]
-- zoom: 10
+- center: [49.1, -119.6]
+- zoom: 11
 ```
 
 ![OIB](images/oib_logo.png)
 
+Chief: Clarence Louie
+
+Placed between Oliver and Osoyoos, with a land base of 13,045 hectares
+
+website: www.oib.ca
+
+
 #Lower Similkameen Indian Band
 ```
-- center: [49.207326, -119.832317]
-- zoom: 10
+- center: [49.1, -119.9]
+- zoom: 11
 ```
 ![LSIB](images/lsib_logo.png)
 
+Chief: Keith Crow
+
+Located in the Similkameen Valley in the South Okanagan
+
+Divided into 11 reserves with a land base of 15,276.4 hectares
+
+Initially the Similkameen people were nomadic; moving from one place to the next
+
+website: www.lsib.net
+
+
+
 #Upper Similkameen Indian Band
 ```
-- center: [49.356317, -120.079440]
+- center: [49.32, -120.23]
 - zoom: 10
 ```
 ![USIB](images/usib_logo.png)
+
+Chief: Charlotte Mitchell
+
+Consists of 7 reserves with a land base of 2,708.5 hectares
+
+Has smallest population of member bands
+
+#Confederated Tribes of the Colville
+```
+- center: [48.2, -119.2]
+- zoom: 9
+```
+![CCT](images/cct_logo.gif)
+
+The Colville Land Base is 2100 square kilometers
+
+The Colville Reservation is known as an American Indian Tribe
+
+The Reservation was established in 1872, it formerly occupied twice the size of land.
+
+website: www.colvilletribes.com
+
+
+
+
 
 </script></body></html>
