--- a/year1tour.html
+++ b/year1tour.html
@@ -43,6 +43,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -99,12 +100,16 @@
 ```
 ![LSIB](images/year1_1.jpg)
 
+Westbank, BC
+
 #2009
 ```
 - center: [49.7839441400873, -120.01787350196]
 - zoom: 10
 ```
 ![LSIB](images/year1_2.jpg)
+
+Peachland 
 
 #2009
 ```
@@ -113,12 +118,16 @@
 ```
 ![LSIB](images/year1_3.jpg)
 
+Peachland to Summerland 
+
 #2009
 ```
 - center: [49.5140959875112, -119.917453535988]
 - zoom: 10
 ```
 ![LSIB](images/year1_4.jpg)
+
+Run from Summerland to Penticton 
 
 #2009
 ```
@@ -127,12 +136,16 @@
 ```
 ![LSIB](images/year1_5.jpg)
 
+Run from Penticton to Keremeos 
+
 #2009
 ```
 - center: [49.137521578551, -120.035127848344]
 - zoom: 10
 ```
 ![LSIB](images/year1_6.jpg)
+
+Run from Keremeos to Chopaka 
 
 #2009
 ```
@@ -141,12 +154,16 @@
 ```
 ![LSIB](images/year1_7.jpg)
 
+Run from Chopaka to Osoyoos 
+
 #2009
 ```
 - center: [49.0789301993044, -119.861505759828]
 - zoom: 10
 ```
 ![LSIB](images/year1_8.jpg)
+
+Running past Spotted Lake 
 
 #2009
 ```
@@ -155,12 +172,16 @@
 ```
 ![LSIB](images/year1_9.jpg)
 
+Running into Osoyoos 
+
 #2009
 ```
 - center: [49.185188773354, -119.833005009237]
 - zoom: 10
 ```
 ![LSIB](images/year1_10.jpg)
+
+Group Photo in Osoyoos 
 
 
 
