--- a/year2tour.html
+++ b/year2tour.html
@@ -50,6 +50,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -106,12 +107,16 @@
 ```
 ![LSIB](images/year2_1.jpg)
 
+Youth dialogue in Westbank, BC 
+
 #2010
 ```
 - center: [49.8849281403557, -119.830999458859]
 - zoom: 10
 ```
 ![LSIB](images/year2_2.jpg)
+
+Running through Westbank, bc 
 
 #2010
 ```
@@ -120,12 +125,16 @@
 ```
 ![LSIB](images/year2_3.jpg)
 
+Running through Kelowna, BC 
+
 #2010
 ```
 - center: [49.9413158668039, -119.696437636349]
 - zoom: 10
 ```
 ![LSIB](images/year2_4.jpg)
+
+Lunch break at University of British Columbia Okanagan, Kelowna, BC 
 
 #2010
 ```
@@ -134,12 +143,16 @@
 ```
 ![LSIB](images/year2_5.jpg)
 
+Start running at HOL on OKIB reserve, Head of the Lake, BC, 
+
 #2010
 ```
 - center: [50.5003914247739, -119.862907646336]
 - zoom: 10
 ```
 ![LSIB](images/year2_6.jpg)
+
+Running through Falkland, BC 
 
 #2010
 ```
@@ -148,12 +161,16 @@
 ```
 ![LSIB](images/year2_7.jpg)
 
+Running past Falkland, BC 
+
 #2010
 ```
 - center: [50.2843752211558, -120.290479174595]
 - zoom: 10
 ```
 ![LSIB](images/year2_8.jpg)
+
+Running on UNIB reserve, Douglas Lake Rd, 
 
 #2010
 ```
@@ -162,6 +179,8 @@
 ```
 ![LSIB](images/year2_9.jpg)
 
+Youth running with feather, UNIB reserve
+
 #2010
 ```
 - center: [50.1409509889149, -120.583746934047]
@@ -169,12 +188,16 @@
 ```
 ![LSIB](images/year2_10.jpg)
 
+Final group run, UNIB reserve 
+
 #2010
 ```
 - center: [50.1433586371838, -120.583704362164]
 - zoom: 10
 ```
 ![LSIB](images/year2_11.jpg)
+
+End of run at N`kwala School, Douglas Lake, BC 
 
 
 
