--- a/year3tour.html
+++ b/year3tour.html
@@ -52,6 +52,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -108,12 +109,16 @@
 ```
 ![LSIB](images/year3_1.jpg)
 
+Running through Merritt, BC 
+
 #2011
 ```
 - center: [49.9237771233108, -120.928339949228]
 - zoom: 10
 ```
 ![LSIB](images/year3_2.jpg)
+
+Group photo at Aspen Grove Junction, BC 
 
 #2011
 ```
@@ -122,12 +127,16 @@
 ```
 ![LSIB](images/year3_3.jpg)
 
+Run from Princeton to Keremeos, BC 
+
 #2011
 ```
 - center: [49.2491621641297, -120.306609930809]
 - zoom: 10
 ```
 ![LSIB](images/year3_4.jpg)
+
+Cheering runners outside of Keremeos, BC 
 
 #2011
 ```
@@ -136,12 +145,16 @@
 ```
 ![LSIB](images/year3_5.jpg)
 
+Running through Crowsnest Trail past Chopaka, 
+
 #2011
 ```
 - center: [49.0787541517763, -119.861327562102]
 - zoom: 10
 ```
 ![LSIB](images/year3_6.jpg)
+
+Spotted Lake, BC 
 
 #2011
 ```
@@ -150,12 +163,16 @@
 ```
 ![LSIB](images/year3_7.jpg)
 
+Running through downtown Osoyoos, BC 
+
 #2011
 ```
 - center: [49.0138783068604, -119.096244183098]
 - zoom: 10
 ```
 ![LSIB](images/year3_8.jpg)
+
+Running through Midway, BC 
 
 #2011
 ```
@@ -171,12 +188,16 @@
 ```
 ![LSIB](images/year3_10.jpg)
 
+Cheering the runners 
+
 #2011
 ```
 - center: [49.0434834118894, -118.518952493763]
 - zoom: 10
 ```
 ![LSIB](images/year3_11.jpg)
+
+Final group photo at Christina Lake, BC 
 
 
 
