--- a/year6tour.html
+++ b/year6tour.html
@@ -52,6 +52,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -108,12 +109,16 @@
 ```
 ![LSIB](images/year6_1.jpg)
 
+Morning prayer at Sensisyusten, Westbank, BC
+
 #2014
 ```
 - center: [49.7838770546095, -120.016644288915]
 - zoom: 10
 ```
 ![LSIB](images/year6_2.jpg)
+
+Running through Peachland, BC 
 
 #2014
 ```
@@ -122,12 +127,16 @@
 ```
 ![LSIB](images/year6_3.jpg)
 
+Running to Summerland, BC
+
 #2014
 ```
 - center: [49.4318776489521, -119.912309659531]
 - zoom: 10
 ```
 ![LSIB](images/year6_4.jpg)
+
+Waiting to Run 
 
 #2014
 ```
@@ -136,12 +145,16 @@
 ```
 ![LSIB](images/year6_5.jpg)
 
+Running past Skaha Bluffs 
+
 #2014
 ```
 - center: [49.2173783866808, -119.987641216854]
 - zoom: 10
 ```
 ![LSIB](images/year6_6.jpg)
+
+Running through mountains over to Keremeos, BC 
 
 #2014
 ```
@@ -150,12 +163,16 @@
 ```
 ![LSIB](images/year6_7.jpg)
 
+Running through Nighthawk border crossing 
+
 #2014
 ```
 - center: [48.8740962243199, -119.918194055066]
 - zoom: 10
 ```
 ![LSIB](images/year6_8.jpg)
+
+Running past Palmer Lake, WA, USA 
 
 #2014
 ```
@@ -164,6 +181,8 @@
 ```
 ![LSIB](images/year6_9.jpg)
 
+Running through Loomis, WA, USA 
+
 #2014
 ```
 - center: [48.5104845177751, -119.818125092419]
@@ -171,12 +190,16 @@
 ```
 ![LSIB](images/year6_10.jpg)
 
+Running to Omak, WA, USA (outside of Riverside) 
+
 #2014
 ```
 - center: [48.4083494303581, -119.818674138725]
 - zoom: 10
 ```
 ![LSIB](images/year6_11.jpg)
+
+Final group run to the powwow grounds in Omak, WA, USA
 
 
 
