--- a/coyotetour.html
+++ b/coyotetour.html
@@ -36,8 +36,7 @@
   
     <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
     <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
-	
-	<script type="text/javascript" src="jquery.js"></script>
+
 	
 	<!--Links to php scripts which convert postgres data to geojson-->  
     <script src="http://voicesontheland.org/media/alex2.php"></script><!--Converts media table with videos to geojsonpoint-->
@@ -52,6 +51,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -115,7 +115,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -123,7 +122,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -131,7 +129,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -139,7 +136,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -147,7 +143,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -155,7 +150,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -163,7 +157,6 @@
 - zoom: 11
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -171,7 +164,6 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -179,7 +171,6 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -187,7 +178,6 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -195,7 +185,6 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -203,7 +192,7 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
+
 
 #Coyote Landmark Areas
 ```
@@ -211,7 +200,6 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -219,7 +207,6 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 #Coyote Landmark Areas
 ```
@@ -227,7 +214,7 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
+
 
 #Coyote Landmark Areas
 ```
@@ -235,6 +222,5 @@
 - zoom: 12
 ```
 
-[<-Back to Main Map](frontpage.html)
 
 </script></body></html>
