--- a/frontpage.html
+++ b/frontpage.html
@@ -48,6 +48,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
 	
 	<style>
 	#map {
