--- a/lakestour.html
+++ b/lakestour.html
@@ -52,6 +52,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
