--- a/year5tour.html
+++ b/year5tour.html
@@ -52,6 +52,7 @@
     <script src="js/unity_runs.js"></script>
     <script src="js/photo7.js"></script>
     <script src="js/photopoints.js"></script>
+    <script src="js/cct.js"></script>
   
   
 </head>
@@ -108,6 +109,7 @@
 ```
 ![LSIB](images/year5_1.jpg)
 
+Opening at Revelstoke Dam, Revelstoke, BC
 
 
 #2013
@@ -117,12 +119,16 @@
 ```
 ![LSIB](images/year5_2.jpg)
 
+Running with the feather
+
 #2013
 ```
 - center: [51.0298755586683, -118.509797769609]
 - zoom: 10
 ```
 ![LSIB](images/year5_3.jpg)
+
+Waiting to run
 
 #2013
 ```
@@ -159,12 +165,16 @@
 ```
 ![LSIB](images/year5_8.jpg)
 
+Planning for the people 
+
 #2013
 ```
 - center: [50.360725258355, -119.586031773076]
 - zoom: 10
 ```
 ![LSIB](images/year5_9.jpg)
+
+Head of the Lake, Vernon, BC 
 
 #2013
 ```
@@ -186,6 +196,8 @@
 - zoom: 10
 ```
 ![LSIB](images/year5_12.jpg)
+
+Final Group photo, Westbank, BC 
 
 
 
